2015-02-17  Per Bothner  <per@bothner.com>

	* ClassExp.java: Add support for a reference from a subclass to a
	field in a not-yet-compiler superclass.
	(createField): New method.
	(setTypes, declareParts): Change accordingly.
	* Declaration.java (getterMethod, setterMethod): New fields.

2015-02-14  Per Bothner  <per@bothner.com>

	* FindTailCalls.java (checkInlineable): Make sure to null inlineHome
	if we can't be inlined.  This may allow some other lambda to be
	inlined in the current function even if we ourselves can't be.

2015-02-12  Per Bothner  <per@bothner.com>

	* InlineCalls.java (visitReferenceExp): Make a copy of the ReferenceExp
	when using the Declaration's value.
	* ReferenceExp.java: New copy constructor.

2015-02-09  Per Bothner  <per@bothner.com>

	* LambdaExp.java (print): Add support for patterns.

	* LambdaExp.java (declareClosureEnv): Only use parent's heapFrame
	if parent is outer.

2015-02-08  Per Bothner  <per@bothner.com>

	* LambdaExp.java (inlinedIn): Fix logic error.

	* LambdaExp.java (allocParameters): Defer allocation of heapFrame
	to enterFunction.
	(allocParameters): Allocate heapFrame here.
	Also add heapFrame Variable to Scope.

2015-02-07  Per Bothner  <per@bothner.com>

	* FindCapturedVars.java (capture): Enable lambda lifting, after
	fixing some problems.

2015-02-07  Per Bothner  <per@bothner.com>

	* FindTailCalls.java (checkInlineable): Do checkInlineCycle
	before setting inlineHome.

2015-02-02  Per Bothner  <per@bothner.com>

	* FindTailCalls.java (checkInlineable): Set inlineHome only after
	we're checked all the tailCallers.
	(visitApplyExp): Minor tweaks.
	(checkInlineCycle): New static method.
	* LambdaExp.java (declareClosureEnv): Better inline handling.
	(compile): Follow inlining.

2015-02-02  Per Bothner  <per@bothner.com>

	* FindCapturedVars.java (checkInlineable): Move method to ...
	* FindTailCalls.java: ... here.
	(visitModuleExp): Call checkInlineable here, at end of pass.