@@ -1,3 +1,8 @@
+2015-02-19  Per Bothner  <per@bothner.com>
+
+	* ConditionalTarget.java (compileFromTarget): Fix bug that treated
+	zero of primitive types as false.  Now make that language-dependent.
+
 2015-02-17  Per Bothner  <per@bothner.com>
 
 	* ClassExp.java: Add support for a reference from a subclass to a
